--- a/First-Html-page/personal-site-challenge.html
+++ b/First-Html-page/personal-site-challenge.html
@@ -4,26 +4,62 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Personal Site Challenge </title>
+        <link rel="icon" href="asset/programmer.PNG">
         <!-- Font Import -->
-        <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
         <!-- CSS Files -->
+        <link rel="stylesheet" type="text/css" href="personal-site-challenge.css" media="screen" />
     </head>
     <body>
-        I'm a Dev Club Member.
-        a programmer 
-        Hello.
-        I am a Web Developer.And I ❤️ to code
-        My Skills.
-        Design & Development
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
-        Debugging
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
-        Get In Touch
-        If you love coding as much as I do.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci consectetur quisquam deleniti, molestiae reiciendis atque hic blanditiis suscipit voluptates harum ducimus, rerum alias! Quos cum, sequi molestiae itaque id sunt!
-        LinkedIn
-        Twitter
-        Website
-        © DevClub
+        <header>
+            <img class="top-cloud" src="asset/cloud.png"/>
+            <div class="center">
+                <h1 class="special-font"> I'm a Dev Club Member. </h1>
+                <h3> a <span class="text-underline">pro</span>grammer </h3>
+                <img src="asset/mountain.png"/>
+         
+            </div>
+            <img class="bottom-cloud" src="asset/cloud.png"/>
+        </header>
+        <div class="site-body">
+            <img src="asset/programmer.png" alt="pogrammer image"/>
+            <h2>Hello.</h2>
+            <p>I am a Web Developer.And I ❤️ to code</p>
+            <hr>
+            <h2>My Skills.</h2>
+            <div class="skill-container">
+                <div class="skill-text-container">
+                    <h3>Design & Development</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
+                    </p>
+                </div>
+                <iframe src="https://giphy.com/embed/ZVik7pBtu9dNS" frameBorder="0"></iframe>
+            </div>
+            <div class="skill-container">
+                <iframe src="https://giphy.com/embed/ukMiDlCmdv2og" frameBorder="0"></iframe>
+                <div class="skill-text-container">
+                    <h3>Debugging</h3>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
+                    </p>
+                </div>
+            </div>
+            <hr>
+            <h2>Get In Touch</h2>
+            <h3>If you love coding as much as I do.</h3>
+            <p class="get-in-touch-text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci consectetur quisquam deleniti, molestiae reiciendis atque hic blanditiis suscipit voluptates harum ducimus, rerum alias! Quos cum, sequi molestiae itaque id sunt!
+            </p>
+            <button>CONTACT ME</button>
+        </div>
+        <footer class="center">
+            <div>
+                <a href="https://www.linkedin.com/">LinkedIn</a>
+                <a href="https://twitter.com/">Twitter</a>
+                <a href="https://www.google.com/">Website</a>                
+            </div>
+            <p>© DevClub</p>
+        </footer>
     </body>
 </html>
