--- a/Fylo-FronedMentor-Challenge/index.html
+++ b/Fylo-FronedMentor-Challenge/index.html
@@ -2,21 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="index.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <title>Fylo data storage component</title>
 </head>
 
 <body>
 
-  You’ve used 815 GB of your storage
+  <!-- You’ve used 815 GB of your storage
 
   185 GB Left
   
   0 GB
-  1000 GB
+  1000 GB -->
+  <div class="site-background">
+    <img src="assets/bg-desktop.png">
+  </div>
+  <div class="floating-container">
+    <div class="left-data">
+      <img class="logo" src="assets/logo.svg"/>
+      <div class="icons-container">
+        <img class="icon" src="assets/icon-document.svg"/>
+        <img class="icon" src="assets/icon-folder.svg"/>
+        <img class="icon" src="assets/icon-upload.svg"/>
+      </div>
+    </div>
+    <div class="right-data">
+      <p>You’ve used <b>815 GB</b> of your storage</p>
+      <progress value="815" max="1000"></progress>
+    </div>
+    <div class="baloon">
+      <h1>185</h1>
+      <p>GB LEFT</p>
+    </div>
+  </div>
   
 </body>
 </html>
