--- a/Fylo-FronedMentor-Challenge/index.html
+++ b/Fylo-FronedMentor-Challenge/index.html
@@ -36,12 +36,12 @@
         </div>
       </div>
       <div class="right-data">
-        <p>You’ve used <b id="usage-info">0 MB</b> of your storage</p>
+        <p>You’ve used <b id="usage-info">0 KB</b> of your storage</p>
         <progress id="storage-progress" value="0" max="1000"></progress>
       </div>
       <div class="baloon">
         <h1 id="baloon-info">1000</h1>
-        <p>MB LEFT</p>
+        <p>KB LEFT</p>
       </div>
     </div>
   </body>
